# ChildHope

./: .gitignore  README.md  pyproject.toml
childhope/common/: logger.py
childhope/data_processing/: __init__.py  eda.py  preprocessing.py
childhope/models/: __init__.py  baseline_lstm.py  tide.py
experiments/: baseline.py
experiments/baseline/: main.py
experiments/baseline/experiment_data/: best_model.pt  normalization_params.pt
experiments/tensorboard_logs/baseline_lstm_1_layer_20241104_011053/Training Progress_Training Loss/: events.out.tfevents.1730682710.psgtju8qadgk.23884.1
experiments/tensorboard_logs/baseline_lstm_1_layer_20241104_011053/Training Progress_Validation Loss/: events.out.tfevents.1730682710.psgtju8qadgk.23884.2
experiments/tensorboard_logs/baseline_lstm_20241104_000845/Training Progress_Training Loss/: events.out.tfevents.1730678997.psgtju8qadgk.21664.1
experiments/tensorboard_logs/baseline_lstm_20241104_000845/Training Progress_Validation Loss/: events.out.tfevents.1730678997.psgtju8qadgk.21664.2
experiments/tensorboard_logs/baseline_lstm_2_layers_20241104_013452/Training Progress_Training Loss/: events.out.tfevents.1730684159.psgtju8qadgk.25345.1
experiments/tensorboard_logs/baseline_lstm_2_layers_20241104_013452/Training Progress_Validation Loss/: events.out.tfevents.1730684159.psgtju8qadgk.25345.2
experiments/tensorboard_logs/tide_20241111_215513/Epoch Losses_train/: events.out.tfevents.1731362921.psgtju8qadgk.69692.1
experiments/tide/: data_utils.py  main.py  visualization.py  visualize_predictions.py
(+3 files in other folders)
